--- a/app/src/main/res/layout/the_game.xml
+++ b/app/src/main/res/layout/the_game.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/backgr"
+    android:background="@drawable/img_backgr"
     android:keepScreenOn="true"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
@@ -14,7 +14,7 @@
         android:layout_height="30dp"
         android:layout_alignParentLeft="true"
         android:layout_marginRight="5dp"
-        android:src="@drawable/like"/>
+        android:src="@drawable/img_like"/>
 
 
     <ImageView
@@ -23,7 +23,7 @@
         android:layout_height="30dp"
         android:layout_marginRight="5dp"
         android:layout_toRightOf="@id/like1"
-        android:src="@drawable/like"/>
+        android:src="@drawable/img_like"/>
 
     <ImageView
         android:id="@+id/like3"
@@ -31,7 +31,7 @@
         android:layout_height="30dp"
         android:layout_marginRight="5dp"
         android:layout_toRightOf="@id/like2"
-        android:src="@drawable/like"/>
+        android:src="@drawable/img_like"/>
 
     <EditText
         android:id="@+id/theGame_ETD_score"
@@ -41,7 +41,9 @@
         android:layout_marginLeft="15dp"
         android:ems="6"
         android:text="Score:"
+        android:backgroundTint="@android:color/transparent"
         android:textSize="20sp"/>
+
 
     <Button
         android:id="@+id/theGame_BTN_exit"
@@ -49,7 +51,7 @@
         android:layout_height="48dp"
         android:layout_toLeftOf="@id/theGame_BTN_pause"
         android:layout_marginRight="4dp"
-        android:background="@drawable/exit3"
+        android:background="@drawable/img_exit3"
         android:ems="6"></Button>
 
     <Button
@@ -59,189 +61,322 @@
         android:layout_alignParentRight="true"
         android:layout_marginTop="9dp"
         android:layout_marginRight="4dp"
-        android:background="@drawable/pause"
+        android:background="@drawable/img_pause"
         android:ems="6"></Button>
 
 
     <GridLayout
-        android:layout_marginLeft="60dp"
         android:id="@+id/theGame_GRID"
         android:layout_width="match_parent"
-        android:layout_height="700dp"
-        android:layout_below="@+id/like1"
-        android:columnCount="3"
-        android:rowCount="6"
-        android:layout_marginTop="10dp"
+        android:layout_height="744dp"
         android:layout_above="@+id/theGame_BTN_right"
+        android:layout_below="@+id/like1"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:layout_marginTop="12dp"
+        android:columnCount="5"
+        android:rowCount="8"
         tools:context=".TheGame">
 
 
         <ImageView
             android:id="@+id/theGame_PIC_dog1"
-            android:layout_width="85dp"
-            android:layout_height="85dp"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
             android:layout_row="0"
             android:layout_column="0"
-
-            android:src="@drawable/enemy"></ImageView>
+            android:src="@drawable/img_enemy"></ImageView>
 
         <ImageView
             android:id="@+id/theGame_PIC_dog2"
-            android:layout_width="85dp"
-            android:layout_height="85dp"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
             android:layout_row="0"
             android:layout_column="1"
-            android:src="@drawable/enemy"></ImageView>
+            android:src="@drawable/img_enemy"></ImageView>
 
         <ImageView
             android:id="@+id/theGame_PIC_dog3"
-            android:layout_width="85dp"
-            android:layout_height="85dp"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
             android:layout_row="0"
             android:layout_column="2"
-            android:src="@drawable/enemy"></ImageView>
+            android:src="@drawable/img_enemy"></ImageView>
+
         <ImageView
             android:id="@+id/theGame_PIC_dog4"
-            android:layout_width="85dp"
-            android:layout_height="85dp"
-            android:layout_row="1"
-            android:layout_column="0"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:layout_row="0"
+            android:layout_column="3"
 
-            android:src="@drawable/enemy"></ImageView>
+            android:src="@drawable/img_enemy"></ImageView>
 
         <ImageView
             android:id="@+id/theGame_PIC_dog5"
-            android:layout_width="85dp"
-            android:layout_height="85dp"
-            android:layout_row="1"
-            android:layout_column="1"
-            android:src="@drawable/enemy"></ImageView>
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:layout_row="0"
+            android:layout_column="4"
+            android:src="@drawable/img_enemy"></ImageView>
 
         <ImageView
             android:id="@+id/theGame_PIC_dog6"
-            android:layout_width="85dp"
-            android:layout_height="85dp"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
             android:layout_row="1"
-            android:layout_column="2"
-            android:src="@drawable/enemy"></ImageView>
+            android:layout_column="0"
+            android:src="@drawable/img_enemy"></ImageView>
 
         <ImageView
             android:id="@+id/theGame_PIC_dog7"
-            android:layout_width="85dp"
-            android:layout_height="85dp"
-            android:layout_row="2"
-            android:layout_column="0"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:layout_row="1"
+            android:layout_column="1"
 
-            android:src="@drawable/enemy"></ImageView>
+            android:src="@drawable/img_enemy"></ImageView>
 
         <ImageView
             android:id="@+id/theGame_PIC_dog8"
-            android:layout_width="85dp"
-            android:layout_height="85dp"
-            android:layout_row="2"
-            android:layout_column="1"
-            android:src="@drawable/enemy"></ImageView>
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:layout_row="1"
+            android:layout_column="2"
+            android:src="@drawable/img_enemy"></ImageView>
 
         <ImageView
             android:id="@+id/theGame_PIC_dog9"
-            android:layout_width="85dp"
-            android:layout_height="85dp"
-            android:layout_row="2"
-            android:layout_column="2"
-            android:src="@drawable/enemy"></ImageView>
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:layout_row="1"
+            android:layout_column="3"
+            android:src="@drawable/img_enemy"></ImageView>
+
         <ImageView
             android:id="@+id/theGame_PIC_dog10"
-            android:layout_width="85dp"
-            android:layout_height="85dp"
-            android:layout_row="3"
-            android:layout_column="0"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:layout_row="1"
+            android:layout_column="4"
 
-            android:src="@drawable/enemy"></ImageView>
+            android:src="@drawable/img_enemy"></ImageView>
 
         <ImageView
             android:id="@+id/theGame_PIC_dog11"
-            android:layout_width="85dp"
-            android:layout_height="85dp"
-            android:layout_row="3"
-            android:layout_column="1"
-            android:src="@drawable/enemy"></ImageView>
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:layout_row="2"
+            android:layout_column="0"
+            android:src="@drawable/img_enemy"></ImageView>
 
         <ImageView
             android:id="@+id/theGame_PIC_dog12"
-            android:layout_width="85dp"
-            android:layout_height="85dp"
-            android:layout_row="3"
-            android:layout_column="2"
-            android:src="@drawable/enemy"></ImageView>
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:layout_row="2"
+            android:layout_column="1"
+            android:src="@drawable/img_enemy"></ImageView>
+
         <ImageView
             android:id="@+id/theGame_PIC_dog13"
-            android:layout_width="85dp"
-            android:layout_height="85dp"
-            android:layout_row="4"
-            android:layout_column="0"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:layout_row="2"
+            android:layout_column="2"
 
-            android:src="@drawable/enemy"></ImageView>
+            android:src="@drawable/img_enemy"></ImageView>
 
         <ImageView
             android:id="@+id/theGame_PIC_dog14"
-            android:layout_width="85dp"
-            android:layout_height="85dp"
-            android:layout_row="4"
-            android:layout_column="1"
-            android:src="@drawable/enemy"></ImageView>
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:layout_row="2"
+            android:layout_column="3"
+            android:src="@drawable/img_enemy"></ImageView>
 
         <ImageView
             android:id="@+id/theGame_PIC_dog15"
-            android:layout_width="85dp"
-            android:layout_height="85dp"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:layout_row="2"
+            android:layout_column="4"
+            android:src="@drawable/img_enemy"></ImageView>
+
+        <ImageView
+            android:id="@+id/theGame_PIC_dog16"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:layout_row="3"
+            android:layout_column="0"
+
+            android:src="@drawable/img_enemy"></ImageView>
+
+        <ImageView
+            android:id="@+id/theGame_PIC_dog17"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:layout_row="3"
+            android:layout_column="1"
+            android:src="@drawable/img_enemy"></ImageView>
+
+        <ImageView
+            android:id="@+id/theGame_PIC_dog18"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:layout_row="3"
+            android:layout_column="2"
+            android:src="@drawable/img_enemy"></ImageView>
+
+        <ImageView
+            android:id="@+id/theGame_PIC_dog19"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:layout_row="3"
+            android:layout_column="3"
+            android:src="@drawable/img_enemy"></ImageView>
+
+        <ImageView
+            android:id="@+id/theGame_PIC_dog20"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:layout_row="3"
+            android:layout_column="4"
+            android:src="@drawable/img_enemy"></ImageView>
+        <ImageView
+            android:id="@+id/theGame_PIC_dog21"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:layout_row="4"
+            android:layout_column="0"
+            android:src="@drawable/img_enemy"></ImageView>
+        <ImageView
+            android:id="@+id/theGame_PIC_dog22"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:layout_row="4"
+            android:layout_column="1"
+            android:src="@drawable/img_enemy"></ImageView>
+        <ImageView
+            android:id="@+id/theGame_PIC_dog23"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
             android:layout_row="4"
             android:layout_column="2"
-            android:src="@drawable/enemy"></ImageView>
+            android:src="@drawable/img_enemy"></ImageView>
+        <ImageView
+            android:id="@+id/theGame_PIC_dog24"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:layout_row="4"
+            android:layout_column="3"
+            android:src="@drawable/img_enemy"></ImageView>
+        <ImageView
+            android:id="@+id/theGame_PIC_dog25"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:layout_row="4"
+            android:layout_column="4"
+            android:src="@drawable/img_enemy"></ImageView>
+        <ImageView
+            android:id="@+id/theGame_PIC_dog26"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:layout_row="5"
+            android:layout_column="0"
+            android:src="@drawable/img_enemy"></ImageView>
+        <ImageView
+            android:id="@+id/theGame_PIC_dog27"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:layout_row="5"
+            android:layout_column="1"
+            android:src="@drawable/img_enemy"></ImageView>
+        <ImageView
+            android:id="@+id/theGame_PIC_dog28"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:layout_row="5"
+            android:layout_column="2"
+            android:src="@drawable/img_enemy"></ImageView>
+        <ImageView
+            android:id="@+id/theGame_PIC_dog29"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:layout_row="5"
+            android:layout_column="3"
+            android:src="@drawable/img_enemy"></ImageView>
+        <ImageView
+            android:id="@+id/theGame_PIC_dog30"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:layout_row="5"
+            android:layout_column="4"
+            android:src="@drawable/img_enemy"></ImageView>
 
         <ImageView
             android:id="@+id/theGame_PIC_player1"
-            android:layout_width="95dp"
-            android:layout_height="95dp"
-            android:layout_row="5"
+            android:layout_width="75dp"
+            android:layout_height="75dp"
+            android:layout_row="6"
             android:layout_column="0"
+            android:layout_gravity="bottom"
             android:src="@drawable/simba"></ImageView>
+
+
         <ImageView
             android:id="@+id/theGame_PIC_player2"
-            android:layout_width="95dp"
-            android:layout_height="95dp"
-            android:layout_row="5"
+            android:layout_width="75dp"
+            android:layout_height="75dp"
+            android:layout_row="6"
             android:layout_column="1"
-
+            android:layout_gravity="bottom"
             android:src="@drawable/simba"></ImageView>
 
         <ImageView
             android:id="@+id/theGame_PIC_player3"
-            android:layout_width="95dp"
-            android:layout_height="95dp"
-            android:layout_row="5"
+            android:layout_width="75dp"
+            android:layout_height="75dp"
+            android:layout_row="6"
             android:layout_column="2"
+            android:layout_gravity="bottom"
+            android:src="@drawable/simba"></ImageView>
+        <ImageView
+            android:id="@+id/theGame_PIC_player4"
+            android:layout_width="75dp"
+            android:layout_height="75dp"
+            android:layout_row="6"
+            android:layout_column="3"
+            android:layout_gravity="bottom"
+            android:src="@drawable/simba"></ImageView>
+        <ImageView
+            android:id="@+id/theGame_PIC_player5"
+            android:layout_width="75dp"
+            android:layout_height="75dp"
+            android:layout_row="6"
+            android:layout_column="4"
+            android:layout_gravity="bottom"
             android:src="@drawable/simba"></ImageView>
     </GridLayout>
 
-        <Button
-            android:id="@+id/theGame_BTN_left"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
-            android:layout_below="@+id/theGame_GRID"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentBottom="true"
-            android:background="@drawable/back"
-            android:src="@drawable/back"/>
+    <Button
+        android:id="@+id/theGame_BTN_left"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:layout_below="@+id/theGame_GRID"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentBottom="true"
+        android:background="@drawable/img_back"
+        android:src="@drawable/img_back"/>
 
-        <Button
-            android:id="@+id/theGame_BTN_right"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
-            android:layout_gravity="bottom"
-            android:layout_marginRight="10dp"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentRight="true"
-            android:background="@drawable/next"
-            android:src="@drawable/next"/>
+    <Button
+        android:id="@+id/theGame_BTN_right"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:layout_gravity="bottom"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:background="@drawable/img_next"
+        android:src="@drawable/img_next"/>
 
 </RelativeLayout>
